Fix body overflow ish.

--- a/src/styles/misc.scss
+++ b/src/styles/misc.scss
@@ -8,6 +8,7 @@ body,
   height: 100%;
   width: 100%;
   margin: 0;
+  overflow: hidden;
   font-size: 1rem;
   background-color: $theme-primary-v1;
   color: #111;
